fixing the out of place h2 no entries after calling renderEntry()

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ h5 {
 
 
 
-h2 {
+.no-entries-msg {
   text-align: center;
   margin-top: 300px;
 }
